# kourier

./: .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
Blog/: README  config.toml
Src/Core/: AsyncQObject.h  CMakeLists.txt  ClockTicker.cpp  ClockTicker.h  ClockTicker.spec.cpp  EpollEventNotifier.cpp  EpollEventNotifier.h  EpollEventSource.h  EpollEventSource.spec.cpp  EpollObjectDeleter.cpp  EpollObjectDeleter.h  EpollObjectDeleter.spec.cpp  EpollReadyEventSourceRegistrar.cpp  EpollReadyEventSourceRegistrar.h  EpollReadyEventSourceRegistrar.spec.cpp  EpollTimerRegistrar.cpp  EpollTimerRegistrar.h  HostAddressFetcher.cpp  HostAddressFetcher.h  HostAddressFetcher.spec.cpp  IOChannel.cpp  IOChannel.h  IOChannel.spec.cpp  MetaTypeSystem.cpp  MetaTypeSystem.h  NoDestroy.h  Object.bench.cpp  Object.cpp  Object.h  Object.spec.cpp  RingBuffer.cpp  RingBuffer.h  RingBuffer.spec.cpp  RingBufferBIO.cpp  RingBufferBIO.h  RuntimeError.cpp  RuntimeError.h  SDK.h  SimdIterator.cpp  SimdIterator.h  (+52 more)
Src/Http/: CMakeLists.txt  ErrorHandler.h  HttpBroker.cpp  HttpBroker.h  HttpBrokerPrivate.cpp  HttpBrokerPrivate.h  HttpBrokerPrivate.spec.cpp  HttpChunkMetadataParser.cpp  HttpChunkMetadataParser.h  HttpChunkMetadataParser.spec.cpp  HttpConnectionHandler.cpp  HttpConnectionHandler.h  HttpConnectionHandler.spec.cpp  HttpConnectionHandlerFactory.cpp  HttpConnectionHandlerFactory.h  HttpFieldBlock.cpp  HttpFieldBlock.h  HttpRequest.cpp  HttpRequest.h  HttpRequestBody.h  HttpRequestLimits.h  HttpRequestLine.h  HttpRequestParser.bench.cpp  HttpRequestParser.cpp  HttpRequestParser.h  HttpRequestParser.spec.cpp  HttpRequestPrivate.h  HttpRequestRouter.cpp  HttpRequestRouter.h  HttpRequestRouter.spec.cpp  HttpServer.bench.cpp  HttpServer.cpp  HttpServer.h  HttpServer.spec.cpp  HttpServerOptions.cpp  HttpServerOptions.h  HttpServerOptions.spec.cpp  HttpServerPrivate.cpp  HttpServerPrivate.h  HttpServerWorker.h  (+2 more)
Src/Lib/: CMakeLists.txt  Config.cmake.in  Kourier
Src/Server/: AsyncServerWorker.h  AsyncServerWorker.spec.cpp  CMakeLists.txt  ConnectionHandler.cpp  ConnectionHandler.h  ConnectionHandlerFactory.h  ConnectionHandlerRepository.cpp  ConnectionHandlerRepository.h  ConnectionHandlerRepository.spec.cpp  ConnectionListener.cpp  ConnectionListener.h  ExecutionState.h  QTcpServerBasedConnectionListener.cpp  QTcpServerBasedConnectionListener.h  QTcpServerBasedConnectionListener.spec.cpp  QTcpServerBasedConnectionListenerPrivate.cpp  QTcpServerBasedConnectionListenerPrivate.h  Server.cpp  Server.h  Server.spec.cpp  ServerError.h  ServerWorker.cpp  ServerWorker.h  ServerWorker.spec.cpp  ServerWorkerFactory.h
Src/Tests/Benchmarks/: CMakeLists.txt
Src/Tests/Design/: CMakeLists.txt  main.cpp
Src/Tests/Design/UnixSignalListenerTestApp/: CMakeLists.txt  main.cpp
Src/Tests/Product/: CMakeLists.txt  Product.spec.cpp  README.md  main.cpp
Src/Tests/Product/EmitterLibrary/: CMakeLists.txt  Emitter.cpp  Emitter.h
Src/Tests/Product/ReceiverLibrary/: CMakeLists.txt  Receiver.cpp  Receiver.h
Src/Tests/Resources/: CMakeLists.txt  TcpServer.cpp  TcpServer.h  TestHostNamesFetcher.cpp  TestHostNamesFetcher.h  TlsServer.cpp  TlsServer.h  TlsTestCertificates.cpp  TlsTestCertificates.h  openssl-ca-extensions.cnf
Src/Tests/Resources/Benchmarks/: README.md  build_all.sh
Src/Tests/Resources/Benchmarks/Go/net-http/: README.md  net-http.dockerfile
Src/Tests/Resources/Benchmarks/Go/net-http/src/: net-http.go
Src/Tests/Resources/Benchmarks/HttpCompliance/: CMakeLists.txt  README.md  http-compliance.dockerfile
Src/Tests/Resources/Benchmarks/HttpCompliance/src/: main.cpp
Src/Tests/Resources/Benchmarks/Kourier/: README.md  kourier.dockerfile
Src/Tests/Resources/Benchmarks/Kourier/src/: CMakeLists.txt  main.cpp
Src/Tests/Resources/Benchmarks/Lithium/: CMakeLists.txt  README.md  lithium-bench.dockerfile
Src/Tests/Resources/Benchmarks/Lithium/src/: main.cpp
Src/Tests/Resources/Benchmarks/QHttpServer/: CMakeLists.txt  README.md  qhttpserver-bench.dockerfile
Src/Tests/Resources/Benchmarks/QHttpServer/src/: main.cpp
Src/Tests/Resources/Benchmarks/QtBase/: README.md  qt-base.dockerfile
Src/Tests/Resources/Benchmarks/Rust/Hyper/: Cargo.toml  README.md  hyper.dockerfile
Src/Tests/Resources/Benchmarks/Rust/Hyper/src/: main.rs
Src/Tests/Resources/Benchmarks/certs/: README.md  ca.crt  ca.key  ca.srl  cert.crt  cert.csr  cert.key
Src/Tests/Resources/Benchmarks/wrk/: README.md  wrk.dockerfile
Src/Tests/Spectator/Src/Lib/: CMakeLists.txt  Config.cmake.in  Generator.cpp  Generator.h  GlobalScopeData.cpp  GlobalScopeData.h  MacroHelpers.h  NoDestroy.h  Scenario.cpp  Scenario.h  ScenarioFilter.h  ScenarioPathRunResults.cpp  ScenarioPathRunResults.h  ScenarioRepository.cpp  ScenarioRepository.h  ScenarioRunResults.cpp  ScenarioRunResults.h  ScenarioRunner.cpp  ScenarioRunner.h  ScenariosRunner.cpp  ScenariosRunner.h  ScenariosRunnerPrivate.cpp  ScenariosRunnerPrivate.h  Section.cpp  Section.h  SectionGuard.cpp  SectionGuard.h  Settings.cpp  Settings.h  Spectator  Spectator.cpp  Spectator.h  SpectatorException.h  SpectatorGlobals.h  Spectator_install
Src/Tests/Spectator/Src/Tests/: CMakeLists.txt  main.cpp
Src/Tests/Spectator/Src/Tests/Resources/: CMakeLists.txt  GeneratorDataRecorder.cpp  GeneratorDataRecorder.h  SectionEntryRecorder.cpp  SectionEntryRecorder.h
Src/Tests/Spectator/Src/Tests/Resources/SettingsFromCmdLineTestApp/: CMakeLists.txt  main.cpp
Src/Tests/Spectator/Src/Tests/Resources/SpectatorKeepsVisitingLeafNodeOfScenarioPathUntilExhaustingDataOfAllGeneratorsOnPathTestApp/: CMakeLists.txt  Scenario.cpp  main.cpp
Src/Tests/Spectator/Src/Tests/Resources/SpectatorOutputsAllScenarioPathsRanTestApp/: CMakeLists.txt  scenarios.cpp
Src/Tests/Spectator/Src/Tests/Resources/SpectatorRunsAllScenariosOnSingleThreadByDefaultTestApp/: CMakeLists.txt  scenarios.cpp
Src/Tests/Spectator/Src/Tutorial/: CMakeLists.txt  README.md  ScenarioThatEntersEventLoop.cpp  ScenarioWithGenerator.cpp  main.cpp
VSCode/PrettyPrinters/QtPrettyPrintersTestApp/: CMakeLists.txt  README.md  main.cpp
(+68 files in other folders)
