cmake_minimum_required(VERSION 3.16)
project(QtPrettyPrintersTestApp VERSION 1.0.0 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
find_package(Qt6 REQUIRED COMPONENTS Core Network)
qt_standard_project_setup()
if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang" AND CMAKE_BUILD_TYPE STREQUAL "Debug")
    message(STATUS "Clang debug build. Settings -glldb compiler option.")
    add_compile_options(-glldb)
endif()
qt_add_executable(QtPrettyPrintersTestApp main.cpp)
target_link_libraries(QtPrettyPrintersTestApp PRIVATE Qt6::Core Qt6::Network)
